--- a/scss/partials/_lists.scss
+++ b/scss/partials/_lists.scss
@@ -22,14 +22,14 @@ article{
     }
     }
     ol {
-      padding: 1em;
+      // padding: 1em;
       margin-bottom: 1em;
       counter-reset: li;
       list-style: none;
       position: relative;
 
       @include mobile {
-        padding: 0 3em;
+        // padding: 0 3em;
         width: 100vw;
       }
 
@@ -37,10 +37,10 @@ article{
 
     > li {
       text-indent: 0;
-      margin: 0 0 0.5em 0;
-      padding: 0.1em 0 0 2.5em;
+      margin: 0 0 0.2em 0;
+      padding: 0.5em 0.5em 0.5em 2.5em;
       position: relative;
-      background: $bk-tr-2;
+      background: $bk-tr-1;
 
       &::before {
         content:counter(li); /* Use the counter as content */
@@ -52,7 +52,7 @@ article{
         margin: 0 0.5em 0 0;
         text-align: center;
         color: $wh-lt;
-        background-color: $bk-tr-2;;
+        background: $bk-tr-2;
         border-left: medium solid $bk-dk;
         border-right: medium solid transparent;
         position: absolute;
@@ -60,7 +60,7 @@ article{
         top: 0em;
       }
       &:nth-child(even) {
-        background: $bk-tr-1;
+
       }
     }
   }
