--- a/css/style.css
+++ b/css/style.css
@@ -608,8 +608,8 @@ article ul {
 article ul > li::before {
   content: '';
   display: inline-block;
-  width: 0.6em;
-  height: 0.6em;
+  width: 10px;
+  height: 10px;
   border-radius: 100%;
   margin-right: .5em;
   background-color: #e92129;
@@ -630,31 +630,25 @@ article ol {
 }
 
 article ol > li {
-  text-indent: 0;
   margin: 0 0 0.2em 0;
-  padding: 0.5em 0.5em 0.5em 2.5em;
+  padding: 0.5em 0.5em 0.5em 2.2em;
   position: relative;
-  background: rgba(26, 26, 26, 0.1);
 }
 
 article ol > li::before {
   content: counter(li);
-  /* Use the counter as content */
   counter-increment: li;
-  /* Increment the counter by 1 */
   display: inline-block;
   width: 1.5em;
-  height: 100%;
   padding: 0.05em 0.2em;
   margin: 0 0.5em 0 0;
   text-align: center;
   color: white;
-  background: rgba(26, 26, 26, 0.2);
-  border-left: medium solid #1a1a1a;
+  background: #e92129;
   border-right: medium solid transparent;
   position: absolute;
   left: 0em;
-  top: 0em;
+  top: 0.5em;
 }
 
 article li {
