--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
 @import 'partials/navigation';
 
 @import 'partials/article-flex';
+// @import 'partials/article-columns';
 @import 'partials/images';
 @import 'partials/lists';
 @import 'partials/footer';
